# healthcare-graphrag

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py  requirements.txt
data/: README.md  appointments.xlsx  barriers.xlsx  bottleneck_insights.xlsx  care_programs.xlsx  care_team_members.xlsx  daily_notes.xlsx  data_dictionary.csv  data_dictionary.xlsx  document_chunks.xlsx  documents.xlsx  extracted_entities.xlsx  extracted_relationships.xlsx  goal_progress_events.xlsx  healthcare_graphrag_all_tables.xlsx  incidents_and_risks.xlsx  interventions.xlsx  life_plan_goals.xlsx  medications.xlsx  patients.xlsx  rag_query_logs.xlsx  support_plans.xlsx
graphrag/: __init__.py  app.py  config.py  dataset.json  dataset.py  graph.py  llm.py  reasoning.py  retrieval.py  schemas.py  viz.py
public/: app.js  index.html  styles.css
scripts/: prepare_data.py
tests/: test_api.py  test_engine.py
