[project]
name = "healthcare-graphrag"
version = "1.0.0"
description = "Graph-augmented retrieval over synthetic healthcare records for care-team review."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
